attempt to fix the white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,13 +79,16 @@ html, body {
 	line-height: 1.1; 
 	margin: 0; 
     padding: 0;
+	
+	 
 }
 .column-about-page-meet-the-team {
   float: left;
   width: 50%;
-	width: 300px;
+  width: 300px;
   margin-bottom: 8px;
   padding: 6px;
+  padding-left: 3%; 
 }
 
 /* Display the columns below each other instead of side by side on small screens */
